ordenando de forma numerica em html mesmo com NaN

--- a/documentos/templates/documentos/tabela_imagens.html
+++ b/documentos/templates/documentos/tabela_imagens.html
@@ -21,10 +21,10 @@
   {% endif %}
 
   <div class="table-responsive">
-    <table id="AtasTable" class="table-bordered table-sm">
+    <table id="ImagensTable" class="table-bordered table-sm">
       <thead class="table-info">
         <tr>
-          <th onclick="sort('#AtasTable', '.item', 'td:nth-child(1)')">{% lng "Data" "Date" %}</th>
+          <th>{% lng "Data" "Date" %}</th>
           <th>{% lng "Anotação" "Annotation" %}</th>
           <th>{% lng "Documento" "Document" %}</th>
         </tr>
