--- a/documentos/templates/documentos/tabela_seguros.html
+++ b/documentos/templates/documentos/tabela_seguros.html
@@ -18,7 +18,7 @@
     <table id="SegurosTable" class="table-bordered table-sm">
       <thead class="table-info">
         <tr>
-          <th onclick="sort('#SegurosTable', '.item', 'td:nth-child(1)')">{% lng "Data" "Date" %}</th>
+          <th>{% lng "Data" "Date" %}</th>
           <th>{% lng "Documento" "Document" %}</th>
         </tr>
       </thead>
