--- a/organizacoes/templates/organizacoes/organizacoes_projetos.html
+++ b/organizacoes/templates/organizacoes/organizacoes_projetos.html
@@ -35,7 +35,7 @@
         <thead class="table-info">
           <tr>
             <th>#</th>
-            <th onclick="sort('#OrganizacoesTable', '.item', 'td:nth-child(2)')">
+            <th onclick="sort('#OrganizacoesTable', '.item', 'td:nth-child(2)', 'n')">
               {% lng "Organização" "Organization" %}
             </th>
             <th onclick="sort('#OrganizacoesTable', '.item', 'td:nth-child(3)', 'd')" width="78em"><small class="tit_peq">
