--- a/professores/templates/professores/bancas_lista.html
+++ b/professores/templates/professores/bancas_lista.html
@@ -98,7 +98,7 @@
                           <a class="imprimir" href="{% url 'user_detail' membro.id %}">
                             {{membro.get_full_name}}
                           </a>
-                          {% if banca.projeto.orientador.user == membro %}
+                          {% if banca.get_projeto.orientador.user == membro %}
                             [{% lng_g banca.get_projeto.orientador.user.genero "orientador" "orientadora" "advisor" %}]
                           {% endif %}
                           {% if membro.id in coorientadores %}
