--- a/projetos/templates/projetos/acompanhamento_view.html
+++ b/projetos/templates/projetos/acompanhamento_view.html
@@ -27,7 +27,7 @@
 
   <div class="modal-body">
 
-    <label for="data_hora">Data e Hora: </label> <input id="data_hora" class="form-control" type="datetime-local" name="data_hora" value="{{data_hora|date:'Y-m-d\TH:i'}}"><br>
+    <label for="data_hora">Data e Hora: </label> <input id="data_hora" class="form-control" type="datetime-local" name="data_hora" min="2018-08-01T00:00" value="{{data_hora|date:'Y-m-d\TH:i'}}"><br>
     
     <label for="texto">Texto:</label><br>
     <textarea id="texto" name="texto" class="form-control" rows="5" required>{% if acompanhamento %}{{acompanhamento.texto}}{% endif %}</textarea>
